syntax = "proto3";

package task;

option go_package = "./task";

service TaskService {
  // Создать новую задачу
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse);

  // Получить задачу по ID
  rpc GetTask(GetTaskRequest) returns (GetTaskResponse);

  // Обновить статус задачи
  rpc UpdateTaskStatus(UpdateTaskStatusRequest) returns (UpdateTaskStatusResponse);
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
}

message CreateTaskResponse {
  string task_id = 1;
}

message GetTaskRequest {
  string task_id = 1;
}

message GetTaskResponse {
  string task_id = 1;
  string title = 2;
  string description = 3;
  string status = 4;
}

message UpdateTaskStatusRequest {
  string task_id = 1;
  string status = 2;
}

message UpdateTaskStatusResponse {
  bool success = 1;
}
